--- a/TekDesk.csproj
+++ b/TekDesk.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="FileUploads\" />
+    <Folder Include="Models\TekDeskViewModels\" />
   </ItemGroup>
 
 </Project>
