--- a/TekDesk.csproj
+++ b/TekDesk.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="FileUploads\" />
     <Folder Include="Models\TekDeskViewModels\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
